# SnakeHS

./: README.md  SnakeHS.cabal
sprites/: snake.xcf
src/: Main.hs
src/Snake/: EventHandler.hs  GameLogic.hs  Render.hs  Types.hs
