name:                SnakeHS
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/SnakeHS#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable SnakeHS
  hs-source-dirs:      src
  other-modules:  Snake.EventHandler, Snake.GameLogic, Snake.Render, Snake.Types
  other-extensions:    FlexibleContexts
  build-depends: base, linear, sdl2, sdl2-ttf, random, mtl, StateVar, text, transformers , lens
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
